# infer

./: Cargo.toml  README.md
.circleci/: config.yml
.github/workflows/: build.yml  miri.yml  release.yml  rust.yml
examples/: file.rs
src/: lib.rs  map.rs  matchtype.rs  read.rs
src/matchers/: app.rs  archive.rs  audio.rs  book.rs  doc.rs  font.rs  image.rs  mod.rs  odf.rs  text.rs  video.rs
src/testdata/: sample.db  sample.doc  sample.ppt  sample.pptx  sample.psd  sample.tif  sample.xls  sample.xlsx  sample2.tif  sample4.tif  sample_elf
testdata/: sample.ape  sample.atdf  sample.avi  sample.avif  sample.cpio  sample.db  sample.der  sample.docx  sample.dwg  sample.epub  sample.flv  sample.heic  sample.hpkg  sample.html  sample.mkv  sample.mobi  sample.mov  sample.odp  sample.ods  sample.odt  sample.ora  sample.par2  sample.pem  sample.pptx  sample.psd  sample.qcow2  sample.tar.bz3  sample.tar.lz4  sample.tar.zst  sample.tif  sample.webm  sample.xlsx  sample.xml  sample2.heic  sample2.mov  sample2.tif  sample2.xml  sample3.tif  sample4.tif  sample5.tif  (+9 more)
tests/: app.rs  archive.rs  audio.rs  book.rs  common.rs  doc.rs  font.rs  image.rs  odf.rs  text.rs  video.rs
