[package]
name = "infer"
version = "0.5.0"
authors = ["Bojan <dbojan@gmail.com>"]
edition = "2018"
description = "Small crate to infer file types based on its magic number signature"
license = "MIT"
keywords = ["magic-number", "filetype", "mime", "mime-types", "no_std"]
readme = "README.md"
homepage = "https://github.com/bojand/infer"
repository = "https://github.com/bojand/infer"
documentation = "https://docs.rs/infer"
exclude = ["testdata/*", "tests/*"]

[features]
default = ["std"]
std = ["alloc", "cfb"]
alloc = []

[[example]]
name = "file"
path = "examples/file.rs"
required-features = ["std"]

[dependencies]
cfb = { version = "0.4.0", optional = true }